examples/errors/part2_semantic1_names_and_symbols_valid.lya
dcl a int;
a = 3;   // Error. ’a’ is not defined.